# UsefulFiles

./: README.md  clock.h  cow_vector.h  list.h  smart_ptr.h  vector.h
FileCompressor/: CMakeLists.txt  Compressor.c  Compressor.h  Constants.h  Decompressor.c  Decompressor.h  Haffman.c  Haffman.h  UserInteraction.c  UserInteraction.h  main.c
GameLife/: BunnyLogic.cpp  BunnyLogic.h  CMakeLists.txt  Constants.h  FieldActions.cpp  FieldActions.h  GrassActions.cpp  GrassActions.h  WolvesLogic.cpp  WolvesLogic.h  main.cpp
